--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ end
 ```erb
 <ul>
   <% @users.each do |user| %>
-  <li><%= @user.first_name %> <%= @user.last_name %></li>
+  <li><%= user.first_name %> <%= user.last_name %></li>
   <% end %>
 </ul>
 ```
@@ -232,7 +232,7 @@ end
 ```erb
 <ul>
   <% @users.each do |user| %>
-  <li><%= @user.full_name %></li>
+  <li><%= user.full_name %></li>
   <% end %>
 </ul>
 ```
@@ -381,7 +381,7 @@ end
 ```erb
 <ul>
   <% @users.each do |user| %>
-    <li><%= @user.full_name %></li>
+    <li><%= user.full_name %></li>
   <% end %>
 </ul>
 ```
